--- a/Cloudbite_Frontend/src/components/Navbar/Navbar.css
+++ b/Cloudbite_Frontend/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 2px solid rgb(61, 8, 8);
 }
 .navbar .logo{
     width: 150px;
