--- a/Cloudbite/src/components/ExploreKitchens/ExploreKitchens.css
+++ b/Cloudbite/src/components/ExploreKitchens/ExploreKitchens.css
@@ -13,7 +13,7 @@
 }
 .explore-kitchen-list{
     display: flex;
-    justify-content: space-between;
+    justify-content:flex-start;
     align-items: center;
     gap: 40px;
     text-align: center;
@@ -26,6 +26,9 @@
 .explore-kitchen-list-item img{
     width: 7.5vw;
     min-width: 80px;
+    height: 7.5vw; /* Ensure a square aspect ratio */
+    min-height: 80px;
+    object-fit: cover; /* Scale the image while maintaining aspect ratio */
     cursor: pointer;
     border-radius: 50%;
     transition: 0.2s;
