--- a/Cloudbite/src/components/ExploreCategory/ExploreCategory.css
+++ b/Cloudbite/src/components/ExploreCategory/ExploreCategory.css
@@ -12,7 +12,7 @@
 }
 .explore-category-list{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     gap: 40px;
     text-align: center;
