--- a/Cloudbite/src/components/ExploreKitchens/ExploreKitchens.css
+++ b/Cloudbite/src/components/ExploreKitchens/ExploreKitchens.css
@@ -13,7 +13,7 @@
 }
 .explore-kitchen-list{
     display: flex;
-    justify-content:flex-start;
+    justify-content: space-evenly;
     align-items: center;
     gap: 40px;
     text-align: center;
@@ -49,7 +49,11 @@
 .explore-kitchen-list-item .active{
     border: 3px solid rgb(61, 8, 8);
     padding: 2px;
-
+}
+.explore-food-list h2{
+    font-size: max(2vw,24px);
+    font-weight: 600; 
+    color: rgb(61, 8, 8);
 }
 @media (max-width:1050px){
     .explore-kitchen-text{
