--- a/Cloudbite/src/components/FoodItem/FoodItem.css
+++ b/Cloudbite/src/components/FoodItem/FoodItem.css
@@ -82,7 +82,7 @@
     color: rgb(61, 8, 8);
     border: 1px solid rgb(61, 8, 8);
     border-radius: 40px;
-    padding: 0.5vw 2.5vw;
+    padding: 0.5vw 1.5vw;
     font-size: 14px;
     font-weight: bold;
     cursor: pointer;
@@ -115,6 +115,37 @@
     font-size: 16px;
     font-weight: bold;
 }
+.food-item-prices {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.food-item-display-price {
+  text-decoration: line-through;
+  color: #888;
+  font-size: 0.9rem;
+}
+
+.food-item-selling-price {
+  color: #e63946;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.food-item-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.food-item-prices-and-cart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 8px;
+}
+
 @media (max-width:750px) {
     
     
